--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,24 @@
-django-tailwind[reload] >= 3.6.0
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/altgraph-0.17.2-py2.py3-none-any.whl
+asgiref==3.7.2
+boto3==1.34.6
+botocore==1.34.6
+dj-database-url==2.1.0
+Django==4.2.8
+django-browser-reload==1.12.1
+django-environ==0.11.2
+django-on-heroku==1.1.2
+django-shortcuts==1.6
+django-tailwind==3.6.0
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/future-0.18.2-py3-none-any.whl
+gunicorn==21.2.0
+jmespath==1.0.1
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/macholib-1.15.2-py2.py3-none-any.whl
+packaging==23.2
+psycopg2-binary==2.9.9
+python-dateutil==2.8.2
+s3transfer==0.10.0
+six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot2/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-124/six-1.15.0-py2.py3-none-any.whl
+sqlparse==0.4.4
+typing_extensions==4.9.0
+urllib3==1.26.18
+whitenoise==6.6.0
