--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
       "node": "18.x"
   },
   "scripts": {
-      "heroku-prebuild": "cd appMate/static_src && npm ci --include=dev",
-      "heroku-postbuild": "cd appMate/static_src && npm run build"
+      "heroku-prebuild": "cd main_app/static_src && npm ci --include=dev",
+      "heroku-postbuild": "cd main_app/static_src && npm run build"
   }
 }
